[workspace]
members = [".", "hoars", "automata-core"]

[workspace.package]
license = "MIT or Apache-2.0"
edition = "2021"
homepage = "https://github.com/leonbohn/automata"
authors = ["León Bohn <bohn@lics.rwth-aachen.de>"]

[package]
name = "automata"
version = "0.0.4"
readme = "README.md"
description = "A library for transition systems and automata over (in)finite words."
repository = "https://github.com/leonbohn/automata"
keywords = [
    "transition-system",
    "language",
    "hoa",
    "automata",
    "omega-automata",
]
categories = ["mathematics", "science"]
edition.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
biodivine-lib-bdd = "0.5.17"
itertools = "0.13.0"
automata-core = { version = "0.1.0", path = "automata-core" }
indexmap = "2.2"
bimap = "0.6"
rand = "0.8.5"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
biodivine-lib-bdd = { workspace = true }
itertools = { workspace = true }
indexmap = { workspace = true }
bimap = { workspace = true }
rand = { workspace = true }

# from this workspace
hoars = { version = "0.2.0", optional = true, path = "hoars" }
automata-core = { workspace = true }

tabled = { version = "0.15", features = ["ansi"] }
owo-colors = "4.0"
test-log = { version = "0.2", features = ["trace"] }
tempfile = { version = "3.10", optional = true }
bit-set = "0.5"
clap = { version = "4.5", optional = true }
rand_distr = { version = "0.4.3", optional = true }

# default backend
petgraph = { version = "0.6.5", default-features = false, features = [
    "stable_graph",
] }
# experimental backend sometime?
# gryf = { git = "https://github.com/pnevyk/gryf", rev = "1efd3a2", optional = true }

[features]
default = ["hoa", "graphviz", "random"]
random = ["dep:rand_distr"]
hoa = ["dep:hoars"]
graphviz = ["dep:tempfile"]
implementations = []
