[workspace]
members = ["automata", "automata-learning", "bin/*", "hoars"]
default-members = ["automata", "automata-*", "hoars", "bin/*"]
exclude = ["python", "bench"]
resolver = "2"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
biodivine-lib-bdd = "0.5.22"
itertools = "0.13.0"
indexmap = "2.6"
bimap = "0.6"
rand = "0.8.5"
thiserror = "1.0"
crossbeam-channel = "0.5.13"
tabled = { version = "0.16", features = ["ansi"] }
