[package]
name = "automata-core"
version = "0.1.0"
edition = "2021"
license.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
biodivine-lib-bdd = { workspace = true }
itertools = { workspace = true }
indexmap = { workspace = true }
bimap = { workspace = true }
rand = { workspace = true }

test-log = { version = "0.2", features = ["trace"] }
