[package]
name = "automata-core"
version = "0.1.0"
readme = "README.md"
description = "A library for transition systems and automata over (in)finite words."
repository = "https://github.com/leonbohn/automata"
keywords = [
    "transition-system",
    "language",
    "hoa",
    "automata",
    "omega-automata",
]
categories = ["mathematics", "science"]
license = "MIT or Apache-2.0"
edition = "2021"
homepage = "https://github.com/leonbohn/automata"
authors = ["León Bohn <bohn@lics.rwth-aachen.de>"]

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
biodivine-lib-bdd = { workspace = true }
itertools = { workspace = true }
indexmap = { workspace = true }
bimap = { workspace = true }
rand = { workspace = true }
tabled = { workspace = true }
thiserror = { workspace = true }

hoars = { version = "0.2.0", optional = true, path = "../hoars" }


[features]
default = []
