[package]
name = "automata-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
itertools = { workspace = true }
bimap = { workspace = true }
thiserror = { workspace = true }
crossbeam-channel = { workspace = true }
rand = { workspace = true }

tabled = { version = "0.15.0", features = ["ansi"] }
owo-colors = "4.1.0"
alea = "0.2"
either = "1.13.0"
paste = "1.0"
fixedbitset = "0.5.7"

automata = { path = "../automata" }

[features]
default = []

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }
# [[bin]]
# name = "coal"
# path = "src/bin/coal.rs"
# required-features = ["coal"]

# [[bench]]
# name = "forc_inference"
# harness = false
