[package]
name = "automata-macros"
description = "Macros for usage with the automata package, cannot be used directly."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.66", features = ["full"] }
