[package]
name = "automata"
version = "0.0.4"
readme = "README.md"
description = "A library for transition systems and automata over (in)finite words."
repository = "https://github.com/leonbohn/automata"
keywords = [
    "transition-system",
    "language",
    "hoa",
    "automata",
    "omega-automata",
]
categories = ["mathematics", "science"]
license = "MIT or Apache-2.0"
edition = "2021"
homepage = "https://github.com/leonbohn/automata"
authors = ["León Bohn <bohn@lics.rwth-aachen.de>"]

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
biodivine-lib-bdd = { workspace = true }
itertools = { workspace = true }
indexmap = { workspace = true }
bimap = { workspace = true }
rand = { workspace = true }

automata-core = { version = "0.1.0", path = "../automata-core" }
hoars = { version = "0.2.0", optional = true, path = "../hoars" }

tabled = { version = "0.15", features = ["ansi"] }
owo-colors = "4.0"
test-log = { version = "0.2", features = ["trace"] }
tempfile = { version = "3.10", optional = true }
bit-set = "0.8"
clap = { version = "4.5", optional = true }
rand_distr = { version = "0.4.3", optional = true }

[features]
default = ["hoa", "graphviz", "random"]
random = ["dep:rand_distr"]
hoa = ["dep:hoars"]
graphviz = ["dep:tempfile"]
implementations = []
