[package]
name = "automata"
version = "0.0.4"
readme = "README.md"
description = "A library for transition systems and automata over (in)finite words."
repository = "https://github.com/leonbohn/automata"
keywords = [
    "transition-system",
    "language",
    "hoa",
    "automata",
    "omega-automata",
]
categories = ["mathematics", "science"]
license = "MIT or Apache-2.0"
edition = "2021"
homepage = "https://github.com/leonbohn/automata"
authors = ["León Bohn <bohn@lics.rwth-aachen.de>"]

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
biodivine-lib-bdd = { workspace = true }
itertools = { workspace = true }
indexmap = { workspace = true }
bimap = { workspace = true }
rand = { workspace = true }
tabled = { workspace = true }
thiserror = { workspace = true }

hoars = { version = "0.2.0", optional = true, path = "../hoars" }

layout-rs = { version = "0.1.2", optional = true }
open = { version = "5.3.0", optional = true }
base64 = { version = "0.22.1", optional = true }
resvg = { version = " 0.44", optional = true }
usvg = { version = " 0.44", optional = true, features = [
    "text",
    "system-fonts",
] }

owo-colors = "4.1"
test-log = { version = "0.2", features = ["trace"] }
tempfile = { version = "3.13", optional = true }
bit-set = "0.6"
clap = { version = "4.5", optional = true }
rand_distr = { version = "0.4.3", optional = true }

petgraph = { version = "0.6.5", optional = true }

[features]
default = ["hoa", "random", "render"]
random = ["dep:rand_distr"]
hoa = ["dep:hoars"]
graphviz = ["dep:tempfile", "dep:open", "render"]
implementations = []
petgraph = ["dep:petgraph"]
render = ["dep:layout-rs", "dep:base64", "dep:resvg", "dep:open", "dep:usvg"]
