[package]
name = "automata-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
automata = { path="../automata" }
# automata = { git = "https://github.com/leonbohn/automata", rev = "48b84ff" }

[features]
commit_0 = []
commit_1 = []
commit_2 = []
commit_3 = []
commit_4 = []

[profile.release]
debug = true
