[package]
name = "hoars"
version = "0.2.1"

description = "A library for dealing with the HOA (Hanoi Omega Automata) file format."
repository = "https://github.com/leonbohn/automata/tree/main/hoars"
readme = "README.md"
keywords = ["omega-automata", "hoa", "automata"]
categories = ["encoding", "parser-implementations"]
license = "MIT or Apache-2.0"
edition = "2021"
homepage = "https://github.com/leonbohn/automata"
authors = ["León Bohn <bohn@lics.rwth-aachen.de>"]

exclude = ["hoa/*", "doc/hoaf.pdf"]

[package.metadata.workspaces]
independent = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
biodivine-lib-bdd = { workspace = true }
itertools = { workspace = true }

automata-core = { version = "0.1.0", path = "../automata-core" }

ariadne = "0.4.1"
chumsky = { version = "0.9.3", default-features = false, features = [
    "ahash",
    "std",
] }
lazy_static = "1.5.0"
